--- a/xisnd.plist
+++ b/xisnd.plist
@@ -11,7 +11,7 @@
 			<key>kind</key>
 			<string>software-package</string>
 			<key>url</key>
-			<string>https://sod-d.github.io/iOSdownload/XiSNDCS.ipa</string>
+			<string>https://drive.google.com/file/d/1VKvM49e2QBiZACyaX0BqXpID6Ase6Jxn/view?usp=sharing</string>
 		</dict>
 		</array>
 			<key>metadata</key>
